[package]
name = "pixelutil-image"
version = "0.2.1"
edition = "2021"
description = "Pixel utilities for image-rs crate"
authors = ["Rostyslav Bohomaz <rostyslav.db@gmail.com>"]
license = "MIT"
repository = "https://github.com/rostyq/pixelutil-image-rs"

[dependencies]
image = { version = "0.25", default-features = false }
nalgebra = { version = "0.34", optional = true }

[features]
nalgebra = ["dep:nalgebra"]
